--- a/vichmat/main.tex
+++ b/vichmat/main.tex
@@ -66,5 +66,33 @@ $\frac{a_n a_{n-1} \dots a_0 \beta }{m}$\\
 Замечание - нули справа убирать нельзы, поскольку они означают разряды числа, например, $0,56$ и $0,560$ - разные приближённые числа, так как первое дано с двумя знаками после запятой, а второе - с тремя.\\\\\\
 Есть два правила округления:\\
 По усечению - просто отсечение всех цифр, до которой мы округляем\\
-По дополнению - \\
+По дополнению - когда также отбрасываются все значащие цифры правее той, до которой производится округление, при необходимости изменяется порядок, при этом руководствуются правилами:\\
+1. если первая слева отбрасываемая цифра меньше пяти, то оставшиеся не меняются , как при усечении\\
+2. если эта цифра больше пяти или она равна пяти и среди остальных отбрасываемых есть ненулевые, то последняя сохраняемая цифра увеличивается на единицу: \\
+3. если эта цифра равна пяти и все остальные отбрасываемые есть нули, то последняя сохраняемая цифра не меняется, если она чётная, и увеличивается на единицу, если она нечётная. \\\\
+Для выявления верных цифр существует простое правило, которое позволяет сразу их находить, не проверяя каждую значащую цифру. Оно формулируется следующим образом: \\
+1. абсолютная погрешность округляется с избытком до одной значащей цифры; \\
+2. если эта цифра не превосходит пяти, то все разряды левее её разряда считаем верными, если же она больше пяти, то соседний слева разряд будет сомнительным, все остальные левее него ― верными.\\
+\subsection{Правила записи приближённых чисел}%
+\setcounter{subsection}{5}
+При приближённых вычислениях руководствуются следующими правилами:\\
+1. В промежуточных результатах оставляют, кроме верных, одну-две сомнительные цифры;\\
+2. Окончательный результат округляют с сохранением не более одной сомнительной цифры.\\
+\subsection{Погрешности арифметических операций}
+\setcounter{subsection}{6}
+Теорема №1: Для абсолютных погрешностей суммы и разности имеет место следующая оценка:\\
+$ \Delta (a \pm b)  \leq \Delta a \pm \Delta b   $\\
+Доказательство:\\
+$ \Delta (a \pm b) = |(a \pm b) - (a \pm b)^{*}| = |(a \pm b) - (a^* \pm b^*)| = |(a-a^*)\pm(b-b^*)|$\\
+Далее, применяя известное свойство модуля $ |x\pm y| \leq |x| + |y| $, получаем:\\
+$ \Delta (a\pm b)^* = | (a-a^*)\pm(b-b^*)| \leq |a-a^*| + |b-b^*| = \Delta a^* + \Delta b^* $\\\\
+Теорема №2: Если $ a,b $ - ненулевые числа одного знака, то:\\
+1. Для относительной погрешности суммы имеет место оценка:\\
+$ \delta(a+b)^* \leq M $, где $ M = max(\delta a^*, \delta b^*)$ 
+2. Для относительной погрешности разности имеет место оценка:⏎
+$ \delta(a+b)^* \leq M \cdot \theta$, где $ \theta = |\frac{a+b}{a-b}|$\\\\
+Теорема №3: Для относительной погрешности произведения имеет место оценка: \\
+$ \delta (ab)^* \leq \delta a^* + \delta b^* + \delta a^* \cdot \delta b^* $\\\\
+Теорема №4: Если $ b^* $ - ненулевое число и $ \delta b^* < 1 $, то для относительной погрешности частного имеет место оценка:\\
+$ \delta (\frac{a}{b})^* \leq \frac{\delta a^* + \delta b^*}{1 - \delta b^*} $
 \end{document}
