--- a/osi/main.tex
+++ b/osi/main.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[latin1]{inputenc}
 \usepackage[russian]{babel}
+\usepackage{graphicx}
+\usepackage{url}
+\graphicspath{ {pictures/} }
 \begin{document}
 \begin{center}
 	Конспект лекций по операционным системам.
@@ -103,4 +106,72 @@ Harmony OS - микроядерная ОС, устанавливается на 
 2. Ядро или микроядро ОС определяет, какой сервер должен ответить на сообщение, и доставляет сообщение серверу.\\
 3. Служба выполняет определённую работу и отправляет обратно ответ.\\
 4. Ядро возвращает клиенту результат в виде другого сообщения.\\
+\section*{Требования к ОС}
+\setcounter{section}{2}
+Требования правительства США.
+\subsection{Совместимость с POSIX}%
+\setcounter{subsection}{6}
+Lorem Ipsum
+\subsection{Безопасность}%
+\setcounter{subsection}{7}
+Безопасность, то есть защита от несанкционированного доступа. Требования, выполнение которых делает систему многопользовательской.\\
+А. Защита от несакционированного проникновения на компьютер.\\
+Б. Защита ресурсов пользователя от других пользователей.\\
+В. Возможность установления квот на системные ресурсы для предотвращения захвата одним пользователем всех системных ресурсов.\\
+Г. Разграничение прав доступа пользователей к файлам и устройствам.\\
+Д. Сохранение информации о действиях пользователей, связанных с безопасностью.\\
+\section*{Особенности реализации ОС Windows}
+\setcounter{section}{3}
+\setcounter{subsection}{0}
+\begin{center}	
+	\includegraphics[scale=0.3]{1}
+\end{center}
+Ядро (kernel) - компонент операционной системы, непосредственно взаимодействующий с процессом и памятью. Выполняет планирование и переключение потоком, обработку прерываний и исключений, взаимодействие с драйверами и мультипроцессорную синхронизацию.\\
+В Windows также реализована идея помещать в ядро исполнительный механизм, а не политику.\\
+\subsection{Поток}%
+В Windown - процесс не является испольняемой сущностью, т.е. непосредственно не выполняется процессором. Это некий объект, который характеризует задачу во время испольнения.\\
+Исполняемая сущность внутри процесса - это поток выполнения (thread of execution).\\
+Поток - это программа, выполняющаяся в адресном пространстве процесса и имеющая доступ ко всем ресурсам процесса. Каждый процесс должен содержать не менее одного потока. Как правило, в Windows процесс содержит несколько потоков.\\
+Поток - это способ распараллеливания вычислительных операций и экономии памяти.\\
+В то время как процесс - это логическое предстваление работы, которую должна выполнить программа, поток отображает одну из многих необходимых подзадач.\\
+\subsection{Прерывания}
+Прерывания (interrupt) - это запрос, поступающий от устройства ввода-вывода, исполняющейся программы или процессора с требованием прервать выполнение текущей программы и запустить на выполнение другую программу. Прерывания бывают внешние и внутренние.\\
+Внешние прерывания являются внешними по отношению к процессору, поэтому так и называются. Внешние прерывания бывают друх типов: прерывания ввода-вывода и аппаратные прерывания.\\
+Прерывания ввода-вывода создают переферийные устройства, которые сообщают, что они готовы выполнить операцию ввода или вывода. Для выполнения операции ввода-вывода надо прервать выполнение текущей программы и выполнить программу управления вводом-выводом. Программа, вызываемая при возникновении прерывания называется программонй обработки прерывания.\\
+Аппаратные прерывания поступают в процессор от различных устройств компьютера и не связаны с вводом-выводом. Они сигнализируют о наступлении какого-нибудь события или об обнаружении сбоев в работе какого-нибудь устройства. В этом случае тоже вызывается соответсвтующая программа обработки прерывания.\\
+Внутренние прерывания происходят внутри процессора и бывают двух типов:\\
+Программными прерываниями считаются запросы со стороны программы на начало выполнения операции ввода-вывода или при обращении к функциям операционной системы.\\
+Исключительные ситуации (исключения) возникают в тех случаях, когда процессор не в состоянии выполнить предусмотренное в программе действие, например, деление на ноль. В этом случае он прерывает выполнение программы и сообщает операционной системе о наличии исключительной ситуации, а также выдаёт необходимую дополнительную информацию, которая позволяет более точно определить причину её возникновения.\\
+\begin{center}	
+	Исключительные ситуации бывают следующих типов:\\
+\end{center}
+Деление на ноль\\
+Пошаговая работа (трассировка)\\
+Переполнение порядка при работе со знаковым операндом\\
+Выход индекса за границу, т.е. обращение к области памяти не принадлежащей к данной программе. В этом случае выдаётся ошибка General Protection Fault. (Нарушения основной защиты)\\
+Другие исключительные ситуации\\
+\subsection{Уровень абстрагирования от оборудования}
+Ядро осуществляет взаимодействие с устройствами, но не непосредственно, а через уровень абстрагирования от оборудования. Чтобы работа ядра не зависела от аппаратного обеспечения введён слой абстрагирования от оборудования HAL (Hardware Abstraction Layer).\\
+В HAL входит загружаемый модуль режима ядра (\url{C:\Windows\System32\hal.dll}, предоставляющий низкоуровневый интерфейс с аппаратной платформой, на которой выполняется Windows. Он скрывает от ОС специфику конкретной аппаратной платформы, т.е. все функции, зависимые от архитектуры и от конкретной машины. Таким образом, ядро работает с некоей стандартизированной виртуальной машиной. HAL преобразует команды ядра в команды, понятные конкретному оборудованию.\\
+Также в HAL входят драйверы различных переферийных устройств.\\
+DLL (Dynamic Link Library) - динамически подключаемая библиотека, подпрограмма, позволяющая многократное использование различными программными приложениями. К DLL относятся разные программные компоненты и в частности драйверы.\\
+В системах UNIX также используются библиотеки. Они имеют расширение .so (shared object).\\
+\subsection{Исполнительная система}
+Исполнительная система (executive system) - спроектирована как уровень абстрагирования от ядра. Она обеспечивает специфические политики для управления объектами, памятью, процессами, файлами и устройствами. Таким образом, ядро реализует механизм, а исполнительная система - политику.\\
+Ядро и исполнительная система включаются в один исполняемый модуль NTOSKRNL.EXE.
+\begin{center}
+	\includegraphics[scale=0.3]{2}
+\end{center}
+\begin{center}
+Основные модули исполнительной системы:
+\end{center}
+1. Диспетчер объектов (Object Manager).\\
+2. Диспетчер процессов и потоков (Process and Thread Manager).\\
+3. Диспетчер виртуальной памяти (Virtual Memory Manager).\\
+4. Справочный монитор защиты (Security Reference Monitor).\\
+5. Диспетчер ввода-вывода (I/O Manager).\\
+6. Диспетчер кэша (Cache Manager).\\
+7. Средство локального вызова процедур (Local Procedure Call).\\
+\subsection{Подсистема}
+Подсистема - это программный модуль, который выступает в качестве сервера. При помощи подсистем реализуется клиент-серверная архитектура.
 \end{document}
