--- a/osi/main.tex
+++ b/osi/main.tex
@@ -571,5 +571,61 @@ Linux - Ubuntu, CentOS, Fedora, openSUSE.
 \end{center}
 \textbf{Демон}  - это системная служба, выполняющая определённую функцию. Как правило демоны запускаются в процессе старта операционной системы.\\
 \textbf{Системные утилиты} предоставляют пользователю определённые сервисные функции. Вызываются по мере необходимости. 
+\begin{center}
+	\includegraphics[scale=0.3]{16}
+\end{center}
+Ядро ОС UNIX состоит из двух основных частей: управления процессами и управления устройствами. Управление процессами резервирует ресурсы, определяет последовательность выполнения процессов и принимает запросы на обслуживание. Управление устройствами контролирует передачу данных между оперативной памятью и периферийными устройствами.\\
+\textbf{Символьные устройства} обрабатывают данные последовательно посимвольно. Произвольный доступ к данным невозможен.\\
+\textbf{Блочное устройство} хранит и обрабатывает информацию отдельными блоками. Используется произвольный доступ к данным, хранящимся в блоках.\\
+Пользователь взаимодействует с компьютером через один или несколько терминалов. Управляет терминалами \textbf{X Windowing System}.\\
+Один из этих терминалов имеет графический интерфейс. Наиболее известные графические оболочки GNOME, KDE и другие.\\
+В текстовых терминалах можно использовать различные командные интерпретаторы. Наиболее известные: bash, tcsh, zsh.
+\subsection{Процессы в Linux}
+Организация работ в ОС Linux основана на понятии \textbf{процесса как единицы работы, управления и потребления ресурсов}. Взаимодействие процессов с ядром происходит по принципу сопрограмм, т.е. процесс системных функций и ядра используется API.\\
+\begin{center}
+	\includegraphics[scale=0.3]{17}
+\end{center}
+\begin{center}
+	Разделы памяти.
+\end{center}
+\textbf{TEXT} - программный код. Доступ к этому участку памяти только для чтения.\\
+\textbf{DATA} - данные программы. Данные можно изменять, хотя  могут быть данные только для чтения.\\
+\textbf{STACK} - стек нужен для организации функциональных блочных вычислений. При вызове подпрограммы в стеке запоминается адрес основной программы, откуда производился вызов, и содержимое регистров процессора. При вызове подпрограммы из вызванной подпрограммы запоминается аналогичная информация. После завершения работы подпрограммы из стека извлекается адрес памяти, откуда надо продолжить выполнение программы.\\
+\textbf{HEAP} - куча. Динамические данные программы, под которые выделяется память.\\
+Программа фактически состоит из двух частей: самой программы, находящейся в исполняемом файле, и библиотек, которые требуются для выполнения программы. Библиотеки загружаются двумя способами.\\
+При запуске исполняемого файла. Это происходит, когда библиотека обязательно потребуется при работе программы.\\
+Программа в процессе выполнения может потребовать загрузить библиотеку. Это происходит тогда, когда библиотека нужна только при выполнении некоторых необязательных операций.\\
+В Linux, как правило, одна библиотека зависит от другой, и одна программа может зависеть от другой.\\
+\subsection{Потоки в Linux}
+\textbf{Легковесные (лёгкие) процессы} - это аналог потоков в Windows. Они создаются для совместного использования адресного пространства. Такие легковесные процессы образуют группу процессов.\\
+Программа на стадии выполнения называется \textbf{заданием}. Задание может содержать несколько процессов, образующих группу процессов.\\
+Группы нумеруются по ID первого созданного процесса. Даже если процесс завершает свою работу, то ID группы не меняется.\\
+\subsection{Планирование в Linux}
+В UNIX также используется приоритетный метод планирования выполнения процессов. Приоритет называется \textbf{nice} (любезность). В отличие от Windows в UNIX чем выше число тем ниже приоритет. Всего 40 уровней приоритета от -19 до 20.\\
+По умолчанию процесс получает значение 0. Дочерний процесс наследует приоритет родительского.\\
+Используя специальные команды, можно устанавливать приоритет запускаемой программы или изменять приоритет уже запущенной программы.\\
+\textbf{nice} - запуск программы с определённым приоритетом.\\
+\textbf{renice} - изменение приоритета уже запущенной программы.\\ 
+\subsection{Рождение и завершение процесса в Linux}
+В UNIX рождение процесса происходит путём дублирования родительского процесса. В результате у дочернего процесса пользовательский контекст такой же как и у родительского процесса. 
+\begin{center}
+	\includegraphics[scale=0.3]{18}
+\end{center}
+Для замены контекста используется специальная команда ОС. В результате выполнения этой команды происходит загрузка в память исполняемого файла и библиотек. После этого процесс переходит в состояние готовность.\\
+\textbf{fork} - создание обычного процесса.\\
+\textbf{clone} - создание легковесного процесса. Не создаются копии адресного пространства родительского процесса. Потоки используют совместно адресное пространство вместе с другими ресурсами, включая дескрипторы файлов.\\
+\textbf{exec} - загрузка программы в адресное пространство процесса.\\ 
+\begin{center}
+	\includegraphics[scale=0.3]{19}
+\end{center}
+\subsection{Псевдофайловая система}
+В Windows используется объектная модель, а в Linux - файловая. Все сущности в Linux представляются файлами. В ОС Linux/UNIX используется шесть типов файлов:
+\begin{itemize}
+        \item \textbf{Обычный файл} - именованная область на внешнем носителе. Обычные файлы содержат данные пользователей.
+	\item \textbf{Символьная ссылка} - содержит путь к некоторому файлу.
+	\item \textbf{Каталог} - это файл, содержащий информацию о файлах и других каталогах, находящийся внутри каталога. Каталоги используются системой для поддержания файловой структуры.
+	\item \textbf{FIFO файлы (First Input - First Output} - используются для обмена данными между процессами. Данные передаются через ядро, при этом создаётся именованный канал Named Pipe.
+	\item \textbf{Файл сокет (Socket)} - тоже используется для межпроцессного взаимодействия, но именованные каналы не создаются, создаются сокеты. Сокеты можно адресовать по IP адресу и номеру порта. Через один файл-сокет могут передавать данные несколько процессов. 
+\end{itemize}
 \end{document}
 
